--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example</groupId>
+  <groupId>ClassAssignmentSystem</groupId>
   <artifactId>SE-302-PROJECT</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>SE-302-PROJECT</name>
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.se302project/ClassAssignmentSystem.HelloApplication</mainClass>
+              <mainClass>se302project/ClassAssignmentSystem.MainApp</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
