--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
       <artifactId>javafx-controls</artifactId>
       <version>21-ea+24</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.9</version>
+    </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
