--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
   <artifactId>SE-302-PROJECT</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>SE-302-PROJECT</name>
+  <packaging>jar</packaging>
 
   <properties>
+    <javafx.version>23.0.1</javafx.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <junit.version>5.9.2</junit.version>  </properties>
 
@@ -17,8 +19,9 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>21-ea+24</version>
+      <version>${javafx.version}</version>
     </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
     <dependency>
@@ -50,7 +53,7 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>21-ea+24</version>
+      <version>23.0.1</version>
     </dependency>
 
 <dependency>
